--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
+KERNEL_SOURCE=https://github.com/chen2021-web/android_kernel_xiaomi_evergo
+KERNEL_SOURCE_BRANCH=evergo-oss-r
+KERNEL_CONFIG=vendor/evergo_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
