--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 KERNEL_SOURCE=https://github.com/chen2021-web/android_kernel_xiaomi_evergo
 KERNEL_SOURCE_BRANCH=evergo-oss-r
 KERNEL_CONFIG=vendor/evergo_defconfig
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_IMAGE_NAME=Image.gz
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
 
